logs/dag_id=dag_ETL_JsonData/run_id=manual__2024-10-09T073039.144962+0000/task_id=Create_Table/attempt=2.log
[2024-10-09T07:35:42.040+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-10-09T07:35:42.072+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:30:39.144962+00:00 [queued]>
[2024-10-09T07:35:42.084+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:30:39.144962+00:00 [queued]>
[2024-10-09T07:35:42.085+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 6
[2024-10-09T07:35:42.102+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): Create_Table> on 2024-10-09 07:30:39.144962+00:00
[2024-10-09T07:35:42.111+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dag_ETL_JsonData', 'Create_Table', 'manual__2024-10-09T07:30:39.144962+00:00', '--job-id', '681', '--raw', '--subdir', 'DAGS_FOLDER/ETLProject/main.py', '--cfg-path', '/tmp/tmpouzgr6in']
[2024-10-09T07:35:42.114+0000] {standard_task_runner.py:91} INFO - Job 681: Subtask Create_Table
[2024-10-09T07:35:42.115+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=11325) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-10-09T07:35:42.115+0000] {standard_task_runner.py:63} INFO - Started process 11327 to run task
[2024-10-09T07:35:42.166+0000] {task_command.py:426} INFO - Running <TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:30:39.144962+00:00 [running]> on host ecb02e117702
[2024-10-09T07:35:42.275+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='admin' AIRFLOW_CTX_DAG_ID='dag_ETL_JsonData' AIRFLOW_CTX_TASK_ID='Create_Table' AIRFLOW_CTX_EXECUTION_DATE='2024-10-09T07:30:39.144962+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-09T07:30:39.144962+00:00'
[2024-10-09T07:35:42.277+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-10-09T07:35:42.287+0000] {sql.py:276} INFO - Executing: create_table()
[2024-10-09T07:35:42.297+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-10-09T07:35:42.307+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-10-09T07:35:42.358+0000] {sql.py:470} INFO - Running statement: create_table(), parameters: None
[2024-10-09T07:35:42.362+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-10-09T07:35:42.363+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "create_table"
LINE 1: create_table()
        ^

[2024-10-09T07:35:42.374+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_ETL_JsonData, task_id=Create_Table, run_id=manual__2024-10-09T07:30:39.144962+00:00, execution_date=20241009T073039, start_date=20241009T073542, end_date=20241009T073542
[2024-10-09T07:35:42.388+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 681 for task Create_Table (syntax error at or near "create_table"
LINE 1: create_table()
        ^
; 11327)
[2024-10-09T07:35:42.411+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-10-09T07:35:42.428+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-09T07:35:42.432+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
